# Mech_spoof

./: .gitignore  README.md  build_plan.md  command.md  diff_in_means_comment.md  diff_in_means_probes.md  exp06_pca_directions_manifest.json  judged_nothink.csv  pyproject.toml  rescored_all_positions.csv  result (3).json  result (4).json  result (5).json  target_system_prompt copy.txt  target_system_prompt.txt  target_system_prompt_medium.txt
aggregate/: spoof_prompts_hard_target_leaks.csv  spoof_prompts_with_eval.csv
data/: conflict_pairs_stratified_1k.jsonl  conflicting_pairs.json  conflicting_pairs_seed.json  harmless_instructions.json
exp06_results/: free_responses.jsonl  manifest.json  none_conflict_generations.jsonl
exp08_directions/: manifest.json
exp09_mc_logprob/: choice_table__k1.0__response_first.csv  choice_table__k1.0__response_last.csv  hit_rates__k1.0__response_first.csv  hit_rates__k1.0__response_last.csv  sweep__exp08_pca_center__response_last.csv
exp1b_authority_conflict/: manifest.json  prompts.csv
exp_floral_leak_probe/: results.jsonl  summary.csv
notebooks/: 00_smoke_test.ipynb  01_authority.ipynb  01b_authority_conflict.ipynb  02_conflict.ipynb  02_conflict_control.ipynb  02b_conflict_evolved.ipynb  02c_rescore_positions.ipynb  02d_order_ablation.ipynb  03_refusal.ipynb  04_attacks.ipynb  05_comparative.ipynb  06_structural_authority.ipynb  07_steering_authority.ipynb  08_directions_v2.ipynb  09_mc_logprob_steering.ipynb  10_exp06_directions_per_model.ipynb  _template.ipynb  build_datasets.ipynb  dataset_build_conflict_pairs.ipynb
(+87 files in other folders)
